--- a/todolist.html
+++ b/todolist.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>todolist</title>
+	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="todo.css">
 </head>
 <body>
@@ -9,6 +10,7 @@
     <h2>Todolist</h2>
     <input id="inputtext" type="text" placeholder="要做的事情" />
     <input id="submit" type="submit" value="保存" />
+    <input id="submit1" type="submit" value="清空" />
   </div>
   <div id="box"></div>
   <script type="text/javascript" src="todo.js"></script>
