--- a/弹框组件.html
+++ b/弹框组件.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
 	<title>弹框组件</title>
+	<script type="text/javascript" src="弹框组件.js"></script>
 	<link rel="stylesheet" type="text/css" href="弹框组件.css">
 </head>
 <body>
-<input type="submit" value="1">
-<input type="submit" value="2">
-<input type="submit" value="3">
+	<input type="submit" value="touch me">
+	<input type="submit" value="touch me">
+	<input type="submit" value="touch me">
+<div id = "container"></div>
 <script type="text/javascript" src="弹框组件.js"></script>
 </body>
 </html>
