--- a/弹框组件.html
+++ b/弹框组件.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="弹框组件.css">
 </head>
 <body>
-	<input type="submit" value="touch me">
-	<input type="submit" value="touch me">
-	<input type="submit" value="touch me">
+	<input type="submit" value="第一个弹框">
+	<input type="submit" value="第二个弹框">
+	<input type="submit" value="第三个弹框">
 <div id = "container"></div>
 <script type="text/javascript" src="弹框组件.js"></script>
 </body>
