--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>弹框组件</title>
+	<title>弹框组件学习</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="window.css">
 	<link rel="stylesheet" type="text/css" href="base.css">
